# CreditRiskModel

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
artifacts/: model.pkl  preprocessor.pkl  test.csv  test_processed.csv  train.csv
mlruns/0/: meta.yaml
notebooks/: eda.ipynb  models.ipynb  risco_de_credito.ipynb
pages/: 1-analise.py  2-preditor.py  3-analise_financeira.py
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py
