[tool.poetry]
name = "creditriskmodel"
version = "0.2.0"
description = "Classificador de risco de credito"
authors = ["Matheus Santos <msantos18.ms@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
numpy = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
xlrd = "^2.0.1"
mlflow = "^2.20.3"
xgboost = "^2.1.4"
dill = "^0.3.9"
streamlit = "^1.43.2"
plotly = "^6.0.0"



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
